# moscow-python-conf-2024

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
_base/: base.yml  jobs.yml  rules.yml  stages.yml  vars.yml
presets/: backend--v1.yml  frontend--v1.yml  python-package--v1.yml
scripts/: __init__.py  pypeline_validation.py
templates/v1/: appsec.yml  build.yml  deploy.yml  e2e.yml  gitlab-release.yml  image-release.yml  publish.yml  scan.yml  static-analyze.yml  test.yml
